--- a/project1/documentation.html
+++ b/project1/documentation.html
@@ -7,43 +7,55 @@
 
 	<link rel="shortcut icon" href="./media/favicon.png">
 	<title>eau</title>
-	<link rel="stylesheet" href="./css/global.css" />
+
 	<link rel="stylesheet" href="./css/documentation.css" /> </head>
+
+	<link rel="stylesheet" href="./css/global.css" />
 
 <body>
 	<nav class="Absolute" id="Top">
-		<a class="BubbleButton FlexCenter ActiveButton" id="Documentation" href="./documentation.html"> doc </a>
+		<a class="BubbleButton FlexCenter ActiveButton" id="Documentation" href="./documentation.html"> document </a>
 		<a class="BubbleButton FlexCenter" id="Home" href="./"> home </a>
-		<a class="BubbleButton FlexCenter" id="Proposal" href="./proposal.html"> about </a>
+		<a class="BubbleButton FlexCenter" id="Proposal" href="./proposal.html"> proposal </a>
 	</nav>
 
 
 	<section class="Absolute" id="Center">
-		<h1>
-				documentation
-		</h1>
-		<hr/>
-		<h2>notes</h2>
-		<ul>
-			<li> Everything in this website was built from scratch. </li>
-			<li> The changelog content was updated as the work is done. The date was generated using my custom editor extension for Atom. The source can be found <a href="https://github.com/louisgv/dotfiles/blob/jojo/.atom/init.coffee">here</a>. </li>
-			<li> l'eau means "water" in French, hence the droplet animation. </li>
-			<li> The logo for the favicon is my design. I created it using <a href="https://github.com/piskelapp/piskel">Piskel</a> </li>
-			<li> License notice was taken from <a href="https://louisgv.github.io/a-jekyll-blog/">my blog</a>, which is also my design. </li>
-		</ul>
-		<h2>changelog</h2>
-		<ul>
-			<li> 9/10/2017, 7:14:41 AM: Refactor max-device-width to max-width </li>
-			<li> 9/3/2017, 2:29:39 PM: Refactor animation </li>
-			<li> 9/3/2017, 2:08:44 PM: Add license notice </li>
-			<li> 9/3/2017, 1:41:23 PM: Finalize styling for documentation.html </li>
-			<li> 9/3/2017, 11:30:12 AM: Finalize styling for proposal.html </li>
-			<li> 9/3/2017, 9:27:30 AM: Refactor reusable style into global.css </li>
-			<li> 9/3/2017, 8:10:27 AM: Finalize layout for index.html </li>
-			<li> 9/2/2017, 3:20:18 PM: Finalize page design and conceptualization </li>
-			<li> 9/2/2017, 2:30:25 PM: Finalize content for each pages </li>
-			<li> 9/2/2017, 9:45:18 AM: Initialize project and planning for layout </li>
-		</ul>
+		<article class="Notes">
+			<h1>
+				notes
+			</h1>
+			<hr/>
+			<ul>
+				<li> Everything in this website was built from scratch. </li>
+				<li> The changelog content was updated as the work is done. The date was generated using my custom editor extension for Atom. The source can be found <a href="https://github.com/louisgv/dotfiles/blob/jojo/.atom/init.coffee">here</a>. </li>
+				<li> l'eau means "water" in French, hence the droplet animation. </li>
+				<li> The logo for the favicon is my design. I created it using <a href="https://github.com/piskelapp/piskel">Piskel</a> </li>
+				<li> I produced all concept arts.</li>
+				<li> License notice was taken from <a href="https://louisgv.github.io/a-jekyll-blog/">my blog</a>, which is also my design. </li>
+			</ul>
+		</article>
+
+		<article class="ChangeLog">
+			<h1>
+				changelog
+			</h1>
+			<hr/>
+			<ul>
+				<li> 9/27/2017, 9:12:20 PM: Refactor content to match new rubric</li>
+				<li> 9/10/2017, 7:14:41 AM: Refactor max-device-width to max-width </li>
+				<li> 9/3/2017, 2:29:39 PM: Refactor animation </li>
+				<li> 9/3/2017, 2:08:44 PM: Add license notice </li>
+				<li> 9/3/2017, 1:41:23 PM: Finalize styling for documentation.html </li>
+				<li> 9/3/2017, 11:30:12 AM: Finalize styling for proposal.html </li>
+				<li> 9/3/2017, 9:27:30 AM: Refactor reusable style into global.css </li>
+				<li> 9/3/2017, 8:10:27 AM: Finalize layout for index.html </li>
+				<li> 9/2/2017, 3:20:18 PM: Finalize page design and conceptualization </li>
+				<li> 9/2/2017, 2:30:25 PM: Finalize content for each pages </li>
+				<li> 9/2/2017, 9:45:18 AM: Initialize project and planning for layout </li>
+			</ul>
+		</article>
+
 	</section>
 
 	<footer class="Fixed FlexCenter" id="Copyright">
