--- a/project1/index.html
+++ b/project1/index.html
@@ -14,16 +14,17 @@
 </head>
 
 <body>
+	<img src="./media/concept_1.png" alt="Concept_Art" class="Concept">
 
 	<nav class="Absolute" id="Top">
-		<a class="BubbleButton FlexCenter" id="Documentation" href="./documentation.html"> doc </a>
+		<a class="BubbleButton FlexCenter" id="Documentation" href="./documentation.html"> document </a>
 		<a class="BubbleButton FlexCenter ActiveButton" id="Index"> home </a>
-		<a class="BubbleButton FlexCenter" id="Proposal" href="./project.html"> project </a>
+		<a class="BubbleButton FlexCenter" id="Proposal" href="./proposal.html"> proposal </a>
 	</nav>
 
 	<nav class="Absolute LastAppear FlexCenter" id="Bottom">
-		<a class="BubbleButton FlexCenter" href="./proposal.html">
-			proposal
+		<a class="BubbleButton FlexCenter" href="./project.html">
+			project
 		</a>
 	</nav>
 
@@ -31,8 +32,9 @@
 		<div id="Icon" class="Absolute"></div>
 		<h1 id="Title"> l'eau.web.meta </h1>
 		<h2 id="Subtitle"> [lo dɑt wɛb dɑt ˈmitə] </h2>
-		<h3 id="Description"> the making of leau.web </h3>
+		<h3 id="Description"> an alchemy poker game </h3>
 	</section>
+
 
 	<footer class="Fixed FlexCenter" id="Copyright">
 		<p>
