--- a/project1/project.html
+++ b/project1/project.html
@@ -11,9 +11,9 @@
 	</head>
 	<body>
 		<nav class="Absolute" id="Top">
-			<a class="BubbleButton FlexCenter" id="Documentation" href="./documentation.html"> doc </a>
+			<a class="BubbleButton FlexCenter" id="Documentation" href="./documentation.html"> document </a>
 			<a class="BubbleButton FlexCenter" id="Home" href="./"> home </a>
-			<a class="BubbleButton FlexCenter" id="Proposal" href="./proposal.html"> about </a>
+			<a class="BubbleButton FlexCenter" id="Proposal" href="./proposal.html"> proposal </a>
 		</nav>
 
 		<section class="Absolute FlexCenter" id="Center">
