Fix validation error

--- a/project1/documentation.html
+++ b/project1/documentation.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
 	<meta charset="utf-8">
@@ -8,9 +8,9 @@
 	<link rel="shortcut icon" href="./media/favicon.png">
 	<title>eau</title>
 
-	<link rel="stylesheet" href="./css/documentation.css" /> </head>
-
+	<link rel="stylesheet" href="./css/documentation.css" />
 	<link rel="stylesheet" href="./css/global.css" />
+</head>
 
 <body>
 	<nav class="Absolute" id="Top">
