--- a/project1/proposal.html
+++ b/project1/proposal.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
 	<meta charset="utf-8">
@@ -151,7 +151,6 @@
 			<p>lab, gdd, interested in <a href="http://bfy.tw/DjIj">machine learning</a>, <a href="http://bfy.tw/DjIq">lifespan extension</a>, and <a href="http://bfy.tw/DjIr">decentralization</a></p>
 		</article>
 
-		</article>
 	</section>
 
 	<footer class="Fixed FlexCenter" id="Copyright">
