--- a/project1/documentation.html
+++ b/project1/documentation.html
@@ -21,10 +21,11 @@
 
 
 	<section class="Absolute" id="Center">
+		<h1>documentation</h1>
 		<article class="Notes">
-			<h1>
+			<h2>
 				notes
-			</h1>
+			</h2>
 			<hr/>
 			<ul>
 				<li> Everything in this website was built from scratch. </li>
@@ -37,9 +38,9 @@
 		</article>
 
 		<article class="ChangeLog">
-			<h1>
+			<h2>
 				changelog
-			</h1>
+			</h2>
 			<hr/>
 			<ul>
 				<li> 9/27/2017, 9:12:20 PM: Refactor content to match new rubric</li>
