--- a/project1/proposal.html
+++ b/project1/proposal.html
@@ -19,45 +19,46 @@
 	</nav>
 
 	<section class="Absolute" id="Center">
+		<h1>proposal</h1>
 		<article class="FadeInArticle First">
-			<h1>concept</h1>
+			<h2>concept</h2>
 			<hr>
 			<p>A digital poker mixed with Gwent and alchemy concepts</p>
 		</article>
 
 		<article class="FadeInArticle Second">
-			<h1>genre</h1>
+			<h2>genre</h2>
 			<hr>
 			<p>"push your luck" card game</p>
 		</article>
 
 		<article class="FadeInArticle Third">
-			<h1>platform</h1>
+			<h2>platform</h2>
 			<hr>
 			<p>Desktop web</p>
 		</article>
 
 		<article class="FadeInArticle Forth">
-			<h1>story</h1>
+			<h2>story</h2>
 			<hr>
 			<p>The main purpose of this game is to be used as a supporting material for L'eau, my senior project. It does not have a story, but the artworks and contents will reflect the L'eau universe.</p>
 		</article>
 
 		<article class="FadeInArticle Fifth">
-			<h1>aesthetics</h1>
+			<h2>aesthetics</h2>
 			<hr>
-			<h2>Graphic</h2>
+			<h3>Graphic</h3>
 			<p>Abstract line sketch</p>
-			<h2>Music</h2>
+			<h3>Music</h3>
 			<p>Ambient funk</p>
-			<h2>Sound Effect</h2>
+			<h3>Sound Effect</h3>
 			<p>Card drawing, card dealing, and card revealing</p>
 		</article>
 
 		<article class="FadeInArticle Sixth">
-			<h1>gameplay</h1>
+			<h2>gameplay</h2>
 			<hr>
-			<h2>Mechanics</h2>
+			<h3>Mechanics</h3>
 			<p>Player first choose their initial hero avatar. Each avatar has:</p>
 			<ul>
 				<li>A unique maximum amount of card in the deck</li>
@@ -119,19 +120,19 @@
 			</ul>
 			<p>The winner is determined by the sum of all remaining elements. In this case, B won with 8 points.</p>
 
-			<h2>Control</h2>
+			<h3>Control</h3>
 			<p>Mouse to interact with the menu UI, the cards, and the deck.</p>
 
-			<h2>Onboarding</h2>
+			<h3>Onboarding</h3>
 			<p>On the player's very first round, they will be handhold on all available action in the game via overlay messages.</p>
 
-			<h2>Player learning</h2>
+			<h3>Player learning</h3>
 			<p>The player need mainly luck to win the game.</p>
 
 		</article>
 
 		<article class="FadeInArticle Sixth">
-			<h1>screenshots</h1>
+			<h2>screenshots</h2>
 			<hr>
 			<div class="ConceptContainer">
 				<img src="./media/concept_0.png" alt="Concept 0" id="Concept0">
@@ -146,7 +147,7 @@
 
 
 		<article class="FadeInArticle Sixth">
-			<h1>developer</h1>
+			<h2>developer</h2>
 			<hr>
 			<p>lab, gdd, interested in <a href="http://bfy.tw/DjIj">machine learning</a>, <a href="http://bfy.tw/DjIq">lifespan extension</a>, and <a href="http://bfy.tw/DjIr">decentralization</a></p>
 		</article>
