Add some more suppliment information

--- a/project1/project.html
+++ b/project1/project.html
@@ -18,8 +18,11 @@
 
 		<section class="Absolute FlexCenter" id="Center">
 			<h1>
-				to be continue...
+				Project
 			</h1>
+			<h2>
+				to be continue...
+			</h2>
 		</section>
 
 		<footer class="Fixed FlexCenter" id="Copyright">
