--- a/project1/proposal.html
+++ b/project1/proposal.html
@@ -29,7 +29,7 @@
 		<article class="FadeInArticle Second">
 			<h2>genre</h2>
 			<hr>
-			<p>"push your luck" card game</p>
+			<p>Push your luck card game</p>
 		</article>
 
 		<article class="FadeInArticle Third">
@@ -59,14 +59,12 @@
 			<h2>gameplay</h2>
 			<hr>
 			<h3>Mechanics</h3>
-			<p>Player first choose their initial hero avatar. Each avatar has:</p>
-			<ul>
-				<li>A unique maximum amount of card in the deck</li>
-				<li>A unique probability to draw a certain type of card.</li>
-			</ul>
+			<p>
+				Player first choose their initial hero avatar. Each avatar represents a unique maximum amount of card in the deck and a unique probability to draw a certain type of card.
+			</p>
 			<p>With the avatar, player proceeds to play with an NPC.</p>
-			<p>The game has 3 rounds, each round has 2 phases: <b>prepare</b> and <b>combat</b>. In the prepare phase, each player takes the turn either drawing a card or using a card on their hand. The card will not be revealed to the other player. In the combat phase, players reveal
-				their cards. Whoever has the stronger avatar win the round. Used cards are discarded, and the next round repeats the same process. Winner of 2 rounds wins the game.</p>
+			<p>The game has 3 rounds, each round has 2 phases: <b>prepare</b> and <b>combat</b>. In the prepare phase, each player takes the turn either drawing a card or using a card on their hand. The card will not be revealed to the other player. In the combat
+				phase, players reveal their cards. Whoever has the stronger avatar win the round. Used cards are discarded, and the next round repeats the same process. Winner of 2 rounds wins the game.</p>
 
 			<h3>Control</h3>
 			<p>Mouse to interact with the menu UI, the cards, and the deck.</p>
@@ -83,13 +81,9 @@
 			<h2>screenshots</h2>
 			<hr>
 			<div class="ConceptContainer">
-				<img src="./media/concept_0.png" alt="Concept 0" id="Concept0">
-			</div>
-			<div class="ConceptContainer">
-				<img src="./media/concept_1.png" alt="Concept 1" id="Concept1">
-			</div>
-			<div class="ConceptContainer">
-				<img src="./media/concept_2.png" alt="Concept 2" id="Concept2">
+				<img src="./media/concept_0.png" alt="Concept 0" class="Concept">
+				<img src="./media/concept_1.png" alt="Concept 1" class="Concept">
+				<img src="./media/concept_2.png" alt="Concept 2" class="Concept">
 			</div>
 		</article>
 
