--- a/project1/documentation.html
+++ b/project1/documentation.html
@@ -29,7 +29,7 @@
 			<hr/>
 			<ul>
 				<li> Everything in this website was built from scratch. </li>
-				<li> Critiques from other say that the navigation is confusing. I respectfully disagree. The overall navigation items has a theme of "suppliment information" for either this page or the main project. If the final project page is a portal to a product, it should only be navigatable from home, not from documentation nor proposal. </li>
+				<li> Critiques from other say that the navigation is confusing. I respectfully disagree. The overall navigation items has a theme of "suppliment information" for either this page or the main project. If the final project page is a portal to a product, it should only be navigatable from home, not from documentation nor proposal. My intention is that this website would be one of the gateways leading to the game. </li>
 				<li> The changelog content was updated as the work is done. The date was generated using my custom editor extension for Atom. The source can be found <a href="https://github.com/louisgv/dotfiles/blob/jojo/.atom/init.coffee">here</a>. </li>
 				<li> l'eau means "water" in French, hence the droplet animation. </li>
 				<li> The logo for the favicon is my design. I created it using <a href="https://github.com/piskelapp/piskel">Piskel</a> </li>
