--- a/week2/home/index.html
+++ b/week2/home/index.html
@@ -99,6 +99,15 @@
 
       </div>
 
+      <h3>Week 6</h3>
+
+      <div class="FlexSpaceAround ProjectLinksContainer">
+        <a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/week6/gallery/gallery.html">
+          galerry
+        </a>
+
+      </div>
+
 
     </section>
   </div>
