--- a/week6/gallery/gallery.html
+++ b/week6/gallery/gallery.html
@@ -74,7 +74,9 @@
 			<li><span data-image="wolf.jpg" title="A red, red rose">Wolf</span></li>
 			<li><span data-image="eagle.jpg" title="The famous clock">Eagle</span></li>
 		</ul>
-		<div id="imagewrapper"> <img id="placeholder" src="./images/placeholder.gif" alt="my image gallery" /> </div>
+		<div id="imagewrapper">
+			<img id="placeholder" src="./images/placeholder.gif" alt="my image gallery" />
+		</div>
 		<p id="description">Choose an image.</p>
 		<footer>
 			<p>For IGME-230 Web Site Design & Implementation</p>
@@ -87,7 +89,7 @@
 					property. We also covered this in web-apps-6.
 					*/
 
-					let buttons = document.querySelectorAll("span")
+					let buttons = document.querySelectorAll("span[data-image]")
 
 					let image = document.getElementById("placeholder")
 
