--- a/week6/random-phrases-1/random-phrases-1.html
+++ b/week6/random-phrases-1/random-phrases-1.html
@@ -15,14 +15,9 @@
       <span id="RandomPhrase"></span>
     </div>
 
-    <h2>Lab</h2>
-
-    <footer class="Fixed FlexCenter" id="Copyright">
+    <footer id="Copyright">
       <p>
-        <a rel="license" href="https://www.gnu.org/licenses/gpl-3.0.html" id="LicenseLogoAnchor">
-          <img src="https://www.gnu.org/graphics/gplv3-88x31.png" class="LicenseLogo" alt="GPLv3" />
-        </a>
-        This work is licensed under a <a rel="license" href="https://www.gnu.org/licenses/gpl-3.0.html">GNU General Public License</a>
+				Copyright LAB, licensed under a <a rel="license" href="https://www.gnu.org/licenses/gpl-3.0.html">GNU General Public License</a>
       </p>
     </footer>
 
