update link to random 1

--- a/week2/home/index.html
+++ b/week2/home/index.html
@@ -103,8 +103,12 @@
 
       <div class="FlexSpaceAround ProjectLinksContainer">
         <a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/week6/gallery/gallery.html">
-          galerry
+          gallery
         </a>
+
+				<a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/week6/random-phrases-1/random-phrases-1.html">
+					random1
+				</a>
 
       </div>
 
