Rename random phrases

--- a/week2/home/index.html
+++ b/week2/home/index.html
@@ -106,8 +106,12 @@
           gallery
         </a>
 
-				<a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/week6/random-phrases-1/random-phrases-1.html">
+				<a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/week6/random-phrases/random-phrases-1.html">
 					random1
+				</a>
+
+				<a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/week6/random-phrases/random-phrases-2.html">
+					random2
 				</a>
 
       </div>
