--- a/week6/random-phrases/random-phrases-1.html
+++ b/week6/random-phrases/random-phrases-1.html
@@ -21,6 +21,6 @@
       </p>
     </footer>
 
-    <script src="./index.js" charset="utf-8"></script>
+    <script src="./index1.js" charset="utf-8"></script>
   </body>
 </html>
