--- a/week6/random-phrases/random-phrases-2.html
+++ b/week6/random-phrases/random-phrases-2.html
@@ -11,9 +11,13 @@
       Anonymous Quote
     </header>
 
-    <div class="ContentContainer">
+    <div class="ContentContainer" id="RandomPhraseContainer">
       <span id="RandomPhrase"></span>
     </div>
+
+		<button id="ShufflePhraseButton">
+			Another one
+		</button>
 
     <footer id="Copyright">
       <p>
@@ -21,6 +25,6 @@
       </p>
     </footer>
 
-    <script src="./index.js" charset="utf-8"></script>
+    <script src="./index2.js" charset="utf-8"></script>
   </body>
 </html>
