--- a/week2/home/index.html
+++ b/week2/home/index.html
@@ -48,30 +48,40 @@
     <section id="Exercises">
       <h2>Exercises</h2>
 			<br>
-			<h3>Week 1</h3>
-
-      <div class="FlexSpaceAround ProjectLinksContainer">
-        <a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/auth/">
-          auth
-        </a>
-        <a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/error/">
-          noterror
-        </a>
-				<a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/error/s">
-					error
-				</a>
-      </div>
-
-			<h3>Week 2</h3>
+			<h3>Week 7</h3>
 
 			<div class="FlexSpaceAround ProjectLinksContainer">
-				<a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/">
-					230 page
+				<a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/week7/word-magnets/word-magnets.html">
+					poetry
 				</a>
-				<a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/week2/recipe/kadayif.html">
-					recipe
-				</a>
+
 			</div>
+
+			<h3>Week 6</h3>
+
+			<div class="FlexSpaceAround ProjectLinksContainer">
+				<a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/week6/gallery/gallery.html">
+					gallery
+				</a>
+
+				<a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/week6/random-phrases/random-phrases-1.html">
+					random1
+				</a>
+
+				<a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/week6/random-phrases/random-phrases-2.html">
+					random2
+				</a>
+
+			</div>
+
+      <h3>Week 4</h3>
+
+      <div class="FlexSpaceAround ProjectLinksContainer">
+        <a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/week4/darth/darth.html">
+          darth
+        </a>
+
+      </div>
 
 			<h3>Week 3</h3>
 
@@ -89,31 +99,31 @@
 					menu
 				</a>
 			</div>
+			
+			<h3>Week 2</h3>
 
-      <h3>Week 4</h3>
+			<div class="FlexSpaceAround ProjectLinksContainer">
+				<a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/">
+					230 page
+				</a>
+				<a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/week2/recipe/kadayif.html">
+					recipe
+				</a>
+			</div>
+
+
+			<h3>Week 1</h3>
 
       <div class="FlexSpaceAround ProjectLinksContainer">
-        <a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/week4/darth/darth.html">
-          darth
+        <a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/auth/">
+          auth
         </a>
-
-      </div>
-
-      <h3>Week 6</h3>
-
-      <div class="FlexSpaceAround ProjectLinksContainer">
-        <a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/week6/gallery/gallery.html">
-          gallery
+        <a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/error/">
+          noterror
         </a>
-
-				<a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/week6/random-phrases/random-phrases-1.html">
-					random1
+				<a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/error/s">
+					error
 				</a>
-
-				<a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/week6/random-phrases/random-phrases-2.html">
-					random2
-				</a>
-
       </div>
 
 
