--- a/week2/home/index.html
+++ b/week2/home/index.html
@@ -48,6 +48,16 @@
     <section id="Exercises">
       <h2>Exercises</h2>
 			<br>
+
+			<h3>Week 9</h3>
+
+			<div class="FlexSpaceAround ProjectLinksContainer">
+				<a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/week9/gif-finder/gif-finder.html">
+					gif
+				</a>
+
+			</div>
+
 			<h3>Week 7</h3>
 
 			<div class="FlexSpaceAround ProjectLinksContainer">
@@ -99,7 +109,7 @@
 					menu
 				</a>
 			</div>
-			
+
 			<h3>Week 2</h3>
 
 			<div class="FlexSpaceAround ProjectLinksContainer">
